CHANGES IN VERSION 0.0.60
-------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o coverageToExon(), findRegions(), fullCoverage(), getRegionCoverage(), 
        makeGenomicState(), plotCluster(), plotOverview(), calcualtePvalues()
        now all have 'chrsStyle' as an argument to specify the chromosome 
        naming convention used. Defaults to UCSC.
    o makeGenomicState() no longer has the 'addChrPrefix' argument. It has been
        replaced by 'chrsStyle' to use GenomeInfoDb to set the naming style.
    o 'chrnums' has been changed to 'chrs' in fullCoverage()

CHANGES IN VERSION 0.0.59
-------------------------

NEW FEATURES

    o Updated to work with BioC version 3.0

CHANGES IN VERSION 0.0.58
-------------------------

NEW FEATURES

    o loadCoverage() and fullCoverage() can now import data from BigWig files.

CHANGES IN VERSION 0.0.57
-------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o regionMatrix() now relies on getRegionCoverage() instead of 
        coverageToExon() making it faster and less memory intensive.

CHANGES IN VERSION 0.0.56
-------------------------

NEW FEATURES

    o Added regionMatrix() for filtering coverage data and using the resulting
        regions to construct a count matrix. Uses several derfinder functions.

SIGNIFICANT USER-VISIBLE CHANGES

    o Made coverageToExon() more robust for different names in 'fullCov'.
    o filterData() and loadCoverage() have new arguments 'filter', 'returnMean',
        and 'returnCoverage' which allow speeding up regionMatrix(). 
        preprocessCoverage() was changed accordingly.
    o getRegionCoverage() now internally uses USCS names.

BUG FIXES

    o Fixed warnings in coverageToExon().


CHANGES IN VERSION 0.0.55
-------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Added a NEWS file with curated information from the git commit history.

CHANGES IN VERSION 0.0.54
-------------------------

SIGNIFICANT USER-VISIBLE CHANGES
