@@ -4,7 +4,8 @@ CHANGES IN VERSION 0.0.60
 SIGNIFICANT USER-VISIBLE CHANGES
 
     o coverageToExon(), findRegions(), fullCoverage(), getRegionCoverage(), 
-        makeGenomicState(), plotCluster(), plotOverview(), calcualtePvalues()
+        makeGenomicState(), plotCluster(), plotOverview(), calculatePvalues(),
+        annotateRegions()
         now all have 'chrsStyle' as an argument to specify the chromosome 
         naming convention used. Defaults to UCSC.
     o makeGenomicState() no longer has the 'addChrPrefix' argument. It has been
